# DeepScientist

./: .dockerignore  .gitignore  .npmrc  AGENTS.md  Dockerfile  MANIFEST.in  README.md  README_ZH.md  docker-compose.yml  install.sh  package-lock.json  package.json  pyproject.toml  uv.toml
assets/connectors/: codex-config.example.toml
assets/fonts/: ds-fonts.css
assets/text/: index.json
docs/: RUNTIME_FLOW_AND_CANVAS.md  TERMINAL_IMPLEMENTATION_CHECKLIST.md  TUI_USAGE.md
docs/en/: 00_QUICK_START.md  01_SETTINGS_REFERENCE.md  02_START_RESEARCH_GUIDE.md  03_QQ_CONNECTOR_GUIDE.md  04_LINGZHU_CONNECTOR_GUIDE.md  05_TUI_GUIDE.md  06_RUNTIME_AND_CANVAS.md  07_MEMORY_AND_MCP.md  08_FIGURE_STYLE_GUIDE.md  09_DOCTOR.md  10_WEIXIN_CONNECTOR_GUIDE.md  11_LICENSE_AND_RISK.md  12_GUIDED_WORKFLOW_TOUR.md  13_CORE_ARCHITECTURE_GUIDE.md  14_PROMPT_SKILLS_AND_MCP_GUIDE.md  15_CODEX_PROVIDER_SETUP.md  16_TELEGRAM_CONNECTOR_GUIDE.md  17_WHATSAPP_CONNECTOR_GUIDE.md  18_FEISHU_CONNECTOR_GUIDE.md  19_EXTERNAL_CONTROLLER_GUIDE.md  19_LOCAL_BROWSER_AUTH.md  (+6 more)
tests/: test_acp_api.py  test_acp_bridge.py  test_api_contract_surface.py  test_baseline_registry.py  test_codex_runner.py  test_config_testing.py  test_connector_bridges.py  test_connector_config_validation.py  test_daemon_api.py  test_generic_connectors.py  test_git_branch_canvas.py  test_init_and_quest.py  test_lab_node_traces.py  test_mcp_servers.py  test_memory_and_artifact.py  test_prompt_builder.py  test_qq_connector.py  test_qq_gateway.py  test_runner_runtime_overrides.py  test_stage_skills.py  test_tui.py  test_tui_e2e.py
(+946 files in other folders)
